--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,27 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  layouts:
+    application:
+      title:  "Bookshelf"
+      home: "Home"
+      questions:  "Questions"
+      news: "News"
+      contacts:  "Contact"
+  store:
+    index:
+      title_html: "Your Catalog"
+      add_html: "Add to Cart"
+  carts:
+    cart:
+      title:  "Your Cart"
+      empty: "Empty cart"
+      checkout: "Checkout"
+  number:
+    currency:
+        format:
+            unit:         "$"
+            precision:     2
+            separator:     "."
+            delimiter:     ","
+            format:        "%u%n"
