--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -44,3 +44,13 @@ en:
             separator:     "."
             delimiter:     ","
             format:        "%u%n"
+  orders:
+        new:
+           legend:           "Please Enter Your Details"
+        form:
+           name:             "Name"
+           address_html:     "Address"
+           email:            "E-mail"
+           pay_type:         "Pay with"
+           pay_prompt_html:  "Select a payment method"
+           submit:           "Place Order"
