--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,7 @@ en:
     index:
       title_html: "Your Catalog"
       add_html: "Add to Cart"
+      thanks: "Thank you for your order"
   carts:
     cart:
       title:  "Your Cart"
@@ -54,3 +55,8 @@ en:
            pay_type:         "Pay with"
            pay_prompt_html:  "Select a payment method"
            submit:           "Place Order"
+        payment_types:
+            check: "Check"
+            credit_card: "Credit Card"
+            purchase_order: "Purchase Order"
+
