--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -10,6 +10,8 @@ es:
     index:
       title_html: "Su Cat&aacute;logo de Pragmatic"
       add_html: "A&ntilde;adir al Carrito"
+      thanks:      "Gracias por su pedido"
+
   carts:
     cart:
       title: "Carrito de la Compra"
@@ -18,7 +20,7 @@ es:
   number:
       currency:
           format:
-              unit:          "$US"
+              unit:          "€"
               precision:     2
               separator:     ","
               delimiter:     "."
@@ -33,3 +35,28 @@ es:
          pay_type:         "Forma de pago"
          pay_prompt_html:  "Seleccione un m&eacute;todo de pago"
          submit:           "Realizar Pedido"
+      payment_types:
+        check:             "Comprobar"
+        credit_card:        "Tarjeta de crédito"
+        purchase_order:     "orden de compra"
+  activerecord:
+    errors:
+        messages:
+            inclusion:    "no est&aacute; incluido en la lista"
+            blank:        "no puede quedar en blanco"
+  errors:
+    template:
+        body:       "Hay problemas con los siguientes campos:"
+        header:
+              one:   "1 error ha impedido que este %{model} se guarde"
+              other: "%{count} errores han impedido que este %{model} se guarde"
+    activerecord:
+      models:
+          order: "pedido"
+      attributes:
+          order:
+            addres:  "Direcci&oacute;n"
+            name:     "Nombre"
+            email:    "E-mail"
+            pay_type: "Forma de pago"
+
